--- a/thinknoack/_includes/portfolio-layout.html
+++ b/thinknoack/_includes/portfolio-layout.html
@@ -1,4 +1,4 @@
-<div id="post{{count}}" class="col-sm-6 col-md-4 col-lg-4 workblock grid">
+<div id="post{{count}}" class="workblock grid">
     <figure class="{{post.className}} ">
         <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
         <figcaption>
@@ -8,7 +8,6 @@
                 <small class="hidden-sm hidden-md client"><span>Client:</span> {{post.client}}</small>
             </div>
         </figcaption>
-        <!-- <small class="postType">{{post.className}}</small> -->
         <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
     </figure>
 </div>
