getting rid of hover eff on images

--- a/thinknoack/theme/src/less/app.less
+++ b/thinknoack/theme/src/less/app.less
@@ -538,16 +538,16 @@ div.no-pad{
             position: relative;
             border: 1px solid fade(@secondary, 25%);
 
-            img{
-                -ms-backface-visibility: hidden;
-                -webkit-backface-visibility: hidden;
-                backface-visibility: hidden;
-                -ms-transform:translateZ(0) scale(1.0, 1.0);
-                -webkit-transform:translateZ(0) scale(1.0, 1.0);
-                transform:translateZ(0) scale(1.0, 1.0);
-                -webkit-transition: .5s ease-in-out;
-                transition: .5s ease-in-out;
-            }
+            // img{
+            //     -ms-backface-visibility: hidden;
+            //     -webkit-backface-visibility: hidden;
+            //     backface-visibility: hidden;
+            //     -ms-transform:translateZ(0) scale(1.0, 1.0);
+            //     -webkit-transform:translateZ(0) scale(1.0, 1.0);
+            //     transform:translateZ(0) scale(1.0, 1.0);
+            //     -webkit-transition: .5s ease-in-out;
+            //     transition: .5s ease-in-out;
+            // }
             .postType{
                 -webkit-transform:translatex(100px);
                 -ms-transform:translatex(100px);
@@ -616,12 +616,12 @@ div.no-pad{
                 }
             }
             &:hover {
-                img{
-                    opacity: 0.9;
-                    -ms-transform:scale(1.1);
-                    -webkit-transform:scale(1.1);
-                    transform:scale(1.1);
-                }
+                //img{
+                //     opacity: 0.9;
+                //     -ms-transform:scale(1.1);
+                //     -webkit-transform:scale(1.1);
+                //     transform:scale(1.1);
+                // }
 
                 figcaption{
                     bottom: 0;
