adjusting the contact section

--- a/thinknoack/_includes/contact.html
+++ b/thinknoack/_includes/contact.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2>Say Hello!</h2>
     <div class="row">
-      <div class="col-sm-7 bio hideAn">
+      <div class="col-md-7 bio hideAn">
       	  <div class="row">
       	  	<div class="col-sm-12">         
 			        <a href="mailto:{{ site.email }}" target="_blank">{{ site.email }}</a>
