--- a/thinknoack/theme/src/less/app.less
+++ b/thinknoack/theme/src/less/app.less
@@ -709,14 +709,12 @@ div.no-pad{
 
 //contact
 #contact{
-    background: url(../img/contact2.jpg) no-repeat;
+    background: url(../img/contact2.jpg) no-repeat 130% 0;
     background-color: #eaedee;
     background-size: 1050px auto;
     min-height: 370px;
     width: 100%;
     padding: 30px 0 0;
-    background-position-x: 100%;
-    background-position-y: 0%;
 
     h2{
         color: @darkGray;
@@ -858,16 +856,9 @@ body {
     -webkit-tap-highlight-color: fade(@dark, 20%);
 }
 
-@media(min-width:1050px){
-    #contact{
-       background-position-x: 150%;
-    }
-}
+
 
 @media(max-width:1051px){
-    #contact{
-       background-position-x: 160px;
-    }
     #contact .bio {
       span,
       a{
