adjusting the intro and port

--- a/thinknoack/_includes/nav.html
+++ b/thinknoack/_includes/nav.html
@@ -17,7 +17,7 @@
                     <a href="#page-top"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#port">Portfolio</a>
+                    <a class="page-scroll" href="#port-scroll">Portfolio</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#skills">Skills and XP</a>
