--- a/thinknoack/_includes/port.html
+++ b/thinknoack/_includes/port.html
@@ -3,7 +3,7 @@
     <section id="workSection" class="show">
         <div class="port-head">
             <div class="row clearfix">
-                    <h2>Recent Work</h2>
+                    <h2><a class="page-scroll recent-work" href="#port-scroll"><i class="fa fa-caret-down"></i><br>Recent Work</a></h2>
             </div>
         </div>
         <div id="workContent" class="animated allInner open">
