--- a/thinknoack/_includes/postNav.html
+++ b/thinknoack/_includes/postNav.html
@@ -17,7 +17,7 @@
                     <a href="{{"/#page-top" | prepend: site.baseurl}}"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="{{"/#port" | prepend: site.baseurl}}">Portfolio</a>
+                    <a class="page-scroll" href="{{"/#port-scroll" | prepend: site.baseurl}}">Portfolio</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="{{"/#skills" | prepend: site.baseurl}}">Skills and XP</a>
