adding new nav link style

--- a/thinknoack/_includes/nav.html
+++ b/thinknoack/_includes/nav.html
@@ -17,13 +17,13 @@
                     <a href="#page-top"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#port-scroll">Portfolio</a>
+                    <a class="page-scroll link link--nukun" href="#port-scroll">Recent <span>work</span></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#skills">Skills and XP</a>
+                    <a class="page-scroll link link--nukun" href="#skills">Skills <span>and</span> XP</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll link link--nukun" href="#contact">Say <span>hello</span></a>
                 </li>
             </ul>
         </div>
