--- a/thinknoack/_includes/postNav.html
+++ b/thinknoack/_includes/postNav.html
@@ -17,13 +17,13 @@
                     <a href="{{"/#page-top" | prepend: site.baseurl}}"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="{{"/#port-scroll" | prepend: site.baseurl}}">Portfolio</a>
+                    <a class="page-scroll link link--nukun" href="{{"/#port-scroll" | prepend: site.baseurl}}">Recent <span>work</span></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="{{"/#skills" | prepend: site.baseurl}}">Skills and XP</a>
+                    <a class="page-scroll link link--nukun" href="{{"/#skills" | prepend: site.baseurl}}">Skills <span>and</span> XP</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="{{"/#contact" | prepend: site.baseurl}}">Contact</a>
+                    <a class="page-scroll link link--nukun" href="{{"/#contact" | prepend: site.baseurl}}">Say <span>hello</span></a>
                 </li>
 
             </ul>
