adjusting hover eff

--- a/thinknoack/_includes/nav.html
+++ b/thinknoack/_includes/nav.html
@@ -6,7 +6,7 @@
                 <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">
-                <span class="brand-inner"><span class="accent">Think</span>Noack</span>
+                <span class="brand-inner link--nukun"><span class="accent">Think</span>Noack</span>
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
