adding client section

--- a/thinknoack/_layouts/front.html
+++ b/thinknoack/_layouts/front.html
@@ -8,6 +8,7 @@ layout: compress
 	    {% include nav.html %}
 	    {% include intro.html %}
 	    {% include port.html %}
+	    {% include clients.html %}
 	    {% include skills.html %}
 	    {% include contact.html %}
 	    {% include footer.html %}
