fixing front-end typos

--- a/thinknoack/_includes/skills.html
+++ b/thinknoack/_includes/skills.html
@@ -85,7 +85,7 @@
                         </span>
                     </div>
                     <div class="panel-body">
-                        Senior Front-end Developer &amp; UX Designer
+                        Senior Front End Developer &amp; UX Designer
                     </div>
                     <div class="panel-heading">
                         Oct. 2012 - Jan. 2014 -
@@ -94,7 +94,7 @@
                         </span>
                     </div>
                     <div class="panel-body">
-                        Front-end Developer &amp; UX Designer
+                        Front End Developer &amp; UX Designer
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -105,7 +105,7 @@
                         </span>
                     </div>
                     <div class="panel-body">
-                        Designer and Front-end Developer
+                        Designer and Front End Developer
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -114,7 +114,7 @@
                         <span class="employer dis">Contractor</span>
                     </div>
                     <div class="panel-body">
-                        Photographer, Designer, and Front-end Developer
+                        Photographer, Designer, and Front End Developer
                     </div>
                 </div>
             </div>
