--- a/thinknoack/_includes/head.html
+++ b/thinknoack/_includes/head.html
@@ -4,6 +4,12 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PT2PWBP');</script>
+    <!-- End Google Tag Manager -->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="apple-touch-icon" sizes="60x60" href="{{"/theme/dist/img/apple-touch-icon-60x60.png?v=2" | prepend: site.baseurl }}">
     <link rel="apple-touch-icon" sizes="180x180" href="{{"/theme/dist/img/apple-touch-icon-180x180.png?v=2" | prepend: site.baseurl }}">
@@ -11,7 +17,7 @@
     <link rel="icon" type="image/png" href="{{"/theme/dist/img/favicon-32x32.png?v=2?v=2" | prepend: site.baseurl }}" sizes="32x32">
     <link rel="icon" type="image/png" href="{{"/theme/dist/img/favicon-96x96.png?v=2" | prepend: site.baseurl }}" sizes="96x96">
     <link rel="icon" type="image/png" href="{{"/theme/dist/img/favicon-16x16.png?v=2" | prepend: site.baseurl }}" sizes="16x16">
-    <link rel="icon" type="image/png" href="{{"/theme/dist/img/favicon.ico?v=2" | prepend: site.baseurl }}">    
+    <link rel="icon" type="image/png" href="{{"/theme/dist/img/favicon.ico?v=2" | prepend: site.baseurl }}">
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
     <!--site css-->
@@ -22,6 +28,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- Google Tag Manager -->
+
 </head>
 
 
