--- a/thinknoack/_includes/scripts.html
+++ b/thinknoack/_includes/scripts.html
@@ -26,3 +26,7 @@
 	ga('create', 'UA-9697814-2', 'auto');
 	ga('send', 'pageview');
 </script>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PT2PWBP"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
