adjusting the a few things and adding new job

--- a/thinknoack/_includes/skills.html
+++ b/thinknoack/_includes/skills.html
@@ -81,6 +81,17 @@
                     <div class="panel-heading">
                         Current Position  -
                         <span class="employer">
+                            <a href="http://www.eclipsemediasolutions.com/" title="Squishymedia">Eclipse MS</a>
+                        </span>
+                    </div>
+                    <div class="panel-body">
+                        Senior Front End Developer &amp; UX Designer
+                    </div> 
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Jan. 2014 - March. 2017 -
+                        <span class="employer">
                             <a href="http://www.squishymedia.com/" title="Squishymedia">Squishymedia</a>
                         </span>
                     </div>
@@ -99,19 +110,8 @@
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        May 2011 – Oct. 2012 -
-                        <span class="employer">
-                            <a href="http://www.eclipsemediasolutions.com/" title="Eclipse Media Solutions">Eclipse Media Solutions</a>
-                        </span>
-                    </div>
-                    <div class="panel-body">
-                        Designer and Front End Developer
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        March 2006 - Oct. 2011 -
-                        <span class="employer dis">Contractor</span>
+                        March 2006 - Oct. 2012 -
+                        <span class="employer dis">Freelance Contractor</span>
                     </div>
                     <div class="panel-body">
                         Photographer, Designer, and Front End Developer
