update to stuff

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,10 +13,10 @@
                     <a href="#page-top"></a>
                 </li>
                 <li>
-                    <a class="page-scroll link link--nukun" href="{% if page.bodyClass == 'front'%}#port-scroll{% else %}/#port-scroll{% endif %}">Example <span>work</span></a>
+                    <a class="page-scroll link link--nukun" href="{% if page.bodyClass == 'front'%}#port-scroll{% else %}/#port-scroll{% endif %}">See Some <span>work</span></a>
                 </li>
                 <li>
-                    <a class="page-scroll link link--nukun" href="{% if page.bodyClass == 'front'%}#skills{% else %}/#skills{% endif %}"> <span>Skills</span> and <span>XP</span></a>
+                    <a class="page-scroll link link--nukun" href="{% if page.bodyClass == 'front'%}#skills{% else %}/#skills{% endif %}"> Checkout My <span>Experience</span></a>
                 </li>
                 <li>
                     <a class="page-scroll link link--nukun" href="{% if page.bodyClass == 'front'%}#contact{% else %}/#contact{% endif %}">Say <span>hello</span></a>
