--- a/_includes/work-list.html
+++ b/_includes/work-list.html
@@ -2,7 +2,7 @@
 <section id="work-list" class="content-section">
         <div class="port-head">
             <div class="row clearfix">
-                    <h2><a class="page-scroll recent-work link--nukun" href="#port-scroll"><span><i class="fa fa-caret-down"></i></span><br>Recent Work</a></h2>
+                    <h2><a class="page-scroll recent-work link--nukun" href="#port-scroll"><span><i class="fa fa-caret-down"></i></span><br>See some Work</a></h2>
             </div>
         </div>
         <div id="portfolio">
