--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -1,5 +1,264 @@
 @import url('https://fonts.googleapis.com/css?family=Catamaran:300,500,700&display=swap');
 
+
+
+$primary: #2697ae;
+$dark: #000;
+$light: #fff;
+$white: #fff;
+$black: #000;
+$darkGray: #3F3F3F;
+$secondary: #152b3d;
+
+
+
+
 body{
 	font-family: 'Catamaran', sans-serif;
+}
+
+
+
+
+.navbar {
+        padding: 10px 0;
+        border-bottom: none;
+        letter-spacing: 1px;
+        background: $white;
+   
+        -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
+        transition: background .5s ease-in-out, padding .5s ease-in-out;
+        &.navbar-custom a{
+            color: $primary;
+        }
+    }
+    .top-nav-collapse {
+        padding: 0;
+        background-color: rgba(0,20,37,.87);
+
+        &.navbar.navbar-custom a{
+            color: $white;
+
+        }
+    }
+    .navbar-custom.top-nav-collapse {
+        border-bottom: 1px solid rgba($dark, .3);
+        a {
+            &.navbar-brand {
+                font-size: 16px;
+                .accent{
+                    color: $primary;
+                }
+            }
+        }
+    }
+
+
+
+
+
+
+.intro {
+    height: calc(100% - 20px);
+}
+
+.intro, .postIntro {
+    overflow: visible;
+    z-index: 0;    
+    display: block;
+    padding: 0;
+    text-align: left;
+
+    .intro-body {
+        display: block;
+        //overflow: hidden;
+        height: 100%;
+        z-index: 900;
+        .value_intro{
+            margin-top: 10%;
+            padding: 40px 0;
+            @media(max-width: 767px){
+                #sad{
+                    transform: none !important; 
+                }
+            }
+
+        }
+        .brand-heading {
+            font-size: 92px;
+            letter-spacing: .04em;
+            .client{
+                letter-spacing: normal;
+            }
+        }
+        .introDes{
+            font-size: 22px;
+        }
+    }
+        &.postIntro {
+        
+        .intro-body .value_intro{
+            margin-top:30px;
+            ul{
+                list-style: none;
+                padding: 0;
+                margin: 0;
+            }
+        }
+    }
+}
+
+
+.front{
+    .intro {
+        margin: 0 20px 0;
+        color: $light;
+        background: url('../img/intro-bg1.jpg') no-repeat 70% 50% fixed;
+        background-color: #152b3d;
+        background-size: cover;
+        overflow: hidden;
+        .intro-body{
+                    background: rgba($secondary, .4);
+            .value_intro{
+                width: 100%;
+                margin:0 auto;
+                padding: 0;
+                height: auto;
+                color: $white;
+                text-transform: uppercase;
+                font-size: 21px;
+                text-align: center;
+                position: absolute;
+                top: 30%;
+                left: 0;
+                right: 0;
+                text-align: center;
+                max-width: 700px;
+                @media(max-width: 767px){
+                    max-width: 80%;
+                }
+    
+                ul{
+                    margin: 0;
+                    padding: 0;
+                    list-style: none;
+                }
+            }
+        }
+    }
+}
+
+@media(max-width:991px) {
+    // .front .intro .intro-body .value_intro{
+    //     margin: 0;
+    //     padding: 0 10px;
+    //     position: relative;
+    //     top: 50px;
+    //     bottom: auto;
+    // }
+
+    .intro,
+    .postIntro{
+        .intro-body {
+            .brand-heading {
+                margin-top: 0;
+                font-size: 33px;
+            }
+            .introDes{
+                font-size: 17px;
+            }
+
+
+        }
+    }
+    .intro {
+        height: calc(100% - 20px);
+    }
+
+    .front .intro{
+        padding:0;
+        .intro-body{
+            .value_intro{
+                .brand-heading{
+                    margin-bottom: 15px;
+                }
+                .introDes{
+                    font-size: 12px;
+                }
+            }
+        }
+    }   
+
+}
+
+
+
+
+/* Link animations */
+.link--nukun {
+    font-weight: 900;
+    text-transform: uppercase;
+    overflow: hidden;
+    padding: 10px 0;
+    transition: color 0.3s;
+    position: relative;
+    margin: 0 10px;
+    overflow: hidden;
+    display: block;
+    font-size: 14px;
+    color: rgba(0,0,0,.9);
+
+}
+
+.link--nukun:focus{
+    color: #819ba0;
+    span{
+    	 color: $primary;
+    }
+}
+
+
+
+.link--nukun:focus{
+    color: rgba(0,0,0,.9);
+}
+
+
+.link--nukun::before,
+.link--nukun::after {
+    content: '';
+    position: absolute;
+    width: 30%;
+    height: 5px;
+    background: transparent;
+    bottom: 0;
+    left: 35%;
+    transition: transform 0.5s;
+    transition-timing-function: cubic-bezier(0.2,1,0.3,1);
+}
+
+.link--nukun::after {
+    background: $primary;
+    transform: translate3d(-300%,0,0) scale3d(0,1,1);
+}
+
+.link--nukun:hover::before {
+    transform: translate3d(300%,0,0) scale3d(0,1,1);
+}
+
+.link--nukun:hover::after {
+    transform: translate3d(0,0,0) scale3d(1,1,1);
+}
+
+.link--nukun span {
+    display: inline-block;
+    position: relative;
+    transform: perspective(1000px) rotate3d(0,1,0,0deg);
+    transition: transform 0.5s, color 0.5s;
+    transition-timing-function: cubic-bezier(0.2,1,0.3,1);
+}
+
+.link--nukun:hover span {
+    color: $primary;
+    transform: perspective(1000px) rotate3d(0,1,0,360deg);
 }
