--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,14 +2,16 @@
   <div class="container">
     <h2>Say Hello!</h2>
     <div class="row">
-      <div class="col-md-7 bio hideAn">
-      	  <div class="row">
-      	  	<div class="col-sm-12">         
-			        <a href="mailto:{{ site.email }}" target="_blank">{{ site.email }}</a>
-			      </div>
-			    </div>
-      		<span>{{site.contactdescription}}</span>
-      	</div>
+      <div class="col-md-7 bio animated visibleAn'">
+        <div class="row">
+          <div class="col-sm-12">
+            <a href="mailto:{{ site.email }}" target="_blank"
+              >{{ site.email }}</a
+            >
+          </div>
+        </div>
+        <span>{{site.contactdescription}}</span>
+      </div>
     </div>
   </div>
 </section>
