--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,28 +1,26 @@
 <header class="intro">
-    <div class="hideAn animated">
-        <div class="inner"></div>
+  <div class="animated visibleAn animated">
+    <div class="inner"></div>
+  </div>
+  <div class="intro-body">
+    <div class="container value_intro">
+      <ul>
+        <li class="background-follow">
+          <div id="sad" class="icon">
+            <div>
+              <div>
+                <h1 class="brand-heading">{{ page.intro }}</h1>
+              </div>
+            </div>
+            <div>
+              <div>
+                <div class="introDes">{{ page.subTeaser }}</div>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
-    <div class="intro-body ">
-        <div class="container value_intro">
-            <ul>
-                <li class="background-follow">
-                    <div id="sad" class="icon">
-                        <div>
-                            <div>
-                                <h1 class="brand-heading">{{ page.intro }}</h1>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <div class="introDes">
-                                    {{ page.subTeaser }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <section id="port-scroll"></section>
+  </div>
+  <section id="port-scroll"></section>
 </header>
