--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,13 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <link rel="apple-touch-icon" sizes="60x60" href="{{'/theme/dist/img/apple-touch-icon-60x60.png?v=2' | prepend: site.baseurl }}">
-    <link rel="apple-touch-icon" sizes="180x180" href="{{'/theme/dist/img/apple-touch-icon-180x180.png?v=2' | prepend: site.baseurl }}">
-    <link rel="icon" type="image/png" href="{{'/theme/dist/img/android-chrome-192x192.png?v=2' | prepend: site.baseurl }}" sizes="192x192">
-    <link rel="icon" type="image/png" href="{{'/theme/dist/img/favicon-32x32.png?v=2?v=2' | prepend: site.baseurl }}" sizes="32x32">
-    <link rel="icon" type="image/png" href="{{'/theme/dist/img/favicon-96x96.png?v=2' | prepend: site.baseurl }}" sizes="96x96">
-    <link rel="icon" type="image/png" href="{{'/theme/dist/img/favicon-16x16.png?v=2' | prepend: site.baseurl }}" sizes="16x16">
-    <link rel="icon" type="image/png" href="{{'/theme/dist/img/favicon.ico?v=2' | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="60x60" href="{{'/img/apple-touch-icon-60x60.png?v=2' | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{'/img/apple-touch-icon-180x180.png?v=2' | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" href="{{'/img/android-chrome-192x192.png?v=2' | prepend: site.baseurl }}" sizes="192x192">
+    <link rel="icon" type="image/png" href="{{'/img/favicon-32x32.png?v=2?v=2' | prepend: site.baseurl }}" sizes="32x32">
+    <link rel="icon" type="image/png" href="{{'/img/favicon-96x96.png?v=2' | prepend: site.baseurl }}" sizes="96x96">
+    <link rel="icon" type="image/png" href="{{'/img/favicon-16x16.png?v=2' | prepend: site.baseurl }}" sizes="16x16">
+    <link rel="icon" type="image/png" href="{{'/img/favicon.ico?v=2' | prepend: site.baseurl }}">
 
 
     <link rel="preload" href="https://fonts.gstatic.com/s/catamaran/v6/o-0NIpQoyXQa2RxT7-5jThZVctyBx2pqPIif.woff2" as="font" type="font/woff2" crossorigin>
